# Hacknarok-Software

./: .gitignore  Makefile  PROJECT_DESCRIPTION.md  README.md  docker-compose.yml  index.html
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py  trustlayer.db-shm
backend/app/api/: demo_router.py  schemas.py  sign_router.py  users_router.py  verify_router.py
backend/app/core/: behavior.py  crypto.py  integrity_clash.py  manifest.py  section_a7.py  soft_binding.py  store.py
backend/app/demo_data/: demo_state.json
backend/app/demo_data/images/: README.md
backend/app/services/: signer.py  verifier.py
extension/: content.css  content.js  manifest.json
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/fakeapp/: page.tsx
frontend/app/gallery/: page.tsx
frontend/app/olx/: page.tsx
frontend/components/gallery/: SocialFeed.tsx
frontend/components/nutrition/: CrIcon.tsx  NutritionSheet.tsx
frontend/lib/: api.ts  useKeystrokeCapture.ts  utils.ts
scripts/: check  dev  watch
